--- a/jes_portfolio.html
+++ b/jes_portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jesidea | Home</title>
-    <link rel="stylesheet" href="stylesheets/app.css" />
+    <link rel="stylesheet" href="css/app.css" />
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700italic,800italic' rel='stylesheet' type='text/css'>
     <script src="bower_components/modernizr/modernizr.js"></script>
   </head>
@@ -12,7 +12,7 @@
 
   <div class="row">
     <div class="large-12 columns">
-      <h1>Jescacena Portfolio</h1>
+      <h1>Javier Escacena Portfolio</h1>
       <hr/>
     </div>
   </div>
@@ -28,7 +28,7 @@
       <h4>About</h4>
       <p>Javier Escacena</p>
       <p>Web developer</p>
-      <p>A friend of mine quotes: <i>Most of the computer sciences bugs are caused for don't read docs properly  </i>.</p>
+      <p>A friend of mine quotes: <i>Most of the programming bugs are caused for don't read docs properly  </i>.</p>
       <i class="fi-social-twitter"></i>
     </div>
     <!--div class="large-4 columns">
