--- a/index.html
+++ b/index.html
@@ -1,147 +1,89 @@
-<!doctype html>
-<html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jesidea | Home</title>
-    <link rel="stylesheet" href="css/app.css" />
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700italic,800italic' rel='stylesheet' type='text/css'>
-  </head>
-  <body>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/app-new.css" />
+  <title>JesIdea</title>
+</head>
+<body>
 
-
-
-  <div class="main-container">
-
-    <div class="row">
-      <div class="header large-12 columns">
-        <nav class="top-bar" data-topbar role="navigation">
-          <div class="logo">
-            <h1><span class="logo-left">JES</span><span class="logo-right">IDEA</span></h1>
-          </div>
-          <section class="top-bar-section">
-            <!-- Right Nav Section -->
-            <ul class="right">
-              <li class="active"><a class="link-top-menu" href="#">Home</a></li>
-              <li class=""><a class="link-top-menu" href="#">About</a></li>
-            </ul>
-          </section>
-        </nav>
-
-
-        <!--div class="nav-bar right">
-          <ul class="button-group">
-            <li><a href="index.html" class="button">Home</a></li>
-            <li><a href="about.html" class="button">About</a></li>
-          </ul>
-        </div>
-        <h1>JES<span style="color:#204CB2;">IDEA</span></h1>
-      </div>
-    -->
+  <header class="header">
+    <div class="logo">
+      <img src="img/logo-jesidea.png" />
     </div>
-  </div>
-
-  <!--div class="row">
-    <div class="large-12 columns">
-      <ul class="example-orbit" data-orbit>
-        <li>
-          <img src="img/pakdb-slide.png" alt="slide 1" />
-          <div class="orbit-caption">
-            Caption One.
-          </div>
-        </li>
-        <li class="active">
-          <img src="img/slider2.jpg" alt="slide 2" />
-          <div class="orbit-caption">
-            Caption Two.
-          </div>
-        </li>
-        <li>
-          <img src="img/slider3.jpg" alt="slide 3" />
-          <div class="orbit-caption">
-            Caption Three.
-          </div>
-        </li>
+    <nav>
+      <ul class="tags">
+        <li><a href="#about">About</a></li>
       </ul>
-    </div>
-  </div-->
+    </nav>
+  </header>
 
-  <!--div class="row">
-    <div class="large-12 columns">
-      <p>As a mediocre web developer i have this site in order to collect web ideas hoping they will serve to all over world benefits.</p>
-      <i class="fi-social-twitter"></i>
-    </div>
-    <hr>
-  </div-->
-
-  <div class="landing-item row">
-    <div class="large-12 columns">
-      <h4>PAKDB</h4>
-      <p>Just another knowledge database (Developers Blog).</p>
-      <div class="app-icon">
-        <div class="overlay-click" onclick="clickIcon(this);"></div>
-        <a href="/pakdb" target="_blank"><img src="img/pakdb-icon.png"></a>
+  <main>
+    <div class="portfolio-wrapper">
+      <div class="portfolio-item">
+        <h2 class="title">PAKDB</h2>
+        <p class="abstract">Just another knowledge database</p>
+        <div class="image round">
+          <a href="http://jesidea.com/pakdb/" target="_blank"><img src="img/mindfullness-icon.png"></a>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <h2 class="title">CISP4WEB</h2>
+        <p class="abstract">Online tool for local communities</p>
+        <div class="image round">
+          <a href="http://intercambio7picos.org/cisp/portal/" target="_blank"><img src="img/cisp-icon-2.png"></a>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <h2 class="title">FRONTEND APRENDIS</h2>
+        <p class="abstract">How to become a decent frontend developer</p>
+        <div class="image round">
+          <a href="https://jescacena.gitbooks.io/frontend-aprendis/content/" target="_blank"><img src="img/logo-gitbook.png"></a>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <h2 class="title">INDILOG</h2>
+        <p class="abstract">Photolog for awesome thing</p>
+        <div class="image round">
+          <a href="http://jesidea.com/indilog" target="_blank"><img src="img/logo-indilog.png"></a>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="landing-item row">
-    <div class="large-12 columns">
-      <h4>CESGI</h4>
-      <p> Online tool for <a href="http://intercambio7picos.org/" target="_blank">Intercambio Siete Picos</a> local exchange community</p>
-      <div class="app-icon">
-        <div class="overlay-click" onclick="clickIcon(this);"></div>
-        <a href="http://intercambio7picos.org/cisp/portal/" target="_blank"><img src="img/cisp-icon.png"></a>
-      </div>
-    </div>
-  </div>
 
-  <div class="landing-item row">
-    <div class="large-12 columns">
-      <h4>Frontend Aprendis</h4>
-      <p>Gitbook for becoming a decent frontend developer.</p>
-      <div class="app-icon">
-        <div class="overlay-click" onclick="clickIcon(this);"></div>
-        <a href="https://jescacena.gitbooks.io/frontend-aprendis/content/" target="_blank"><img src="img/frontend-gitbook-icon.png"></a>
-      </div>
-    </div>
-  </div>
+    <section class="about">
+      <a name="about"></a>
+      <p>Place for Ideas thought for world wide benefits</p>
+    </section>
 
-  <div class="landing-item row">
-    <div class="large-12 columns">
-      <h4>Indilog</h4>
-      <p>Photolog for awesome thing</p>
-      <div class="app-icon">
-        <div class="overlay-click" onclick="clickIcon(this);"></div>
-        <a href="http://jesidea.com/indilog" target="_blank"><img src="img/indilog-icon.png"></a>
-      </div>
-    </div>
-  </div>
+</main>
 
-
-  <!--div class="row">
-    <div class="large-12 columns">
-      <hr>
-      <h4>Contact Me</h4>
-      <div class="large-4 columns">
-        Email: <a class="__cf_email__" href="mailto:javier.escacena@gmail.com" >javier.escacena@gmail.com</a>
-      </div>
-      <div class="large-4 columns">
-        Github: <a href="https://github.com/jescacena" target="_blank">https://github.com/jescacena</a>
-      </div>
-      <div class="large-4 columns">
-        Linkedin: <a href="https://es.linkedin.com/pub/javier-escacena-sánchez/24/1b7/8b3" target="_blank">https://es.linkedin.com/pub/javier-escacena-sánchez/24/1b7/8b3</a>
-      </div>
-    </div>
-  </div-->
-
-  <footer class="row">
-    <div class="content large-12 columns">
-      <p>© Copyright jescacena</p>
-    </div>
+  <footer>
+    <ul>
+      <li><a target="_blank" href="http://github.com/jescacena">Github</a></li>
+      <li><a target="_blank" href="https://es.linkedin.com/in/jescacena">Linkedin</a></li>
+      <li>©JES</li>
+    </ul>
   </footer>
 
-  <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/foundation/js/foundation.min.js"></script>
-    <script src="js/app.js"></script>
-  </body>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-rc1/jquery.min.js"></script>
+  <script type="text/javascript">
+  $(function() {
+    $('a[href*="#"]:not([href="#"])').click(function() {
+      if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+        var target = $(this.hash);
+        target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+        if (target.length) {
+          $('html, body').animate({
+            scrollTop: target.offset().top
+          }, 1000);
+          return false;
+        }
+      }
+    });
+  });
+  </script>
+
+</body>
+
 </html>
