build for cachebust with hashes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- build:css css/app-new.css -->
   <link rel="stylesheet" href="css/app-new.css" />
+  <!-- endbuild -->
+
   <title>JesIdea</title>
 </head>
 <body>
@@ -21,6 +24,20 @@
 
   <main>
     <div class="portfolio-wrapper">
+      <div class="portfolio-item">
+        <h2 class="title">EL INTERCAMBIADOR</h2>
+        <p class="abstract">Cercedilla public transport online tool</p>
+        <div class="image round">
+          <a href="http://intercambiador.cercemap.org" target="_blank"><img src="img/logo-intercambiador.png"></a>
+        </div>
+      </div>
+      <div class="portfolio-item">
+        <h2 class="title">CERCEMAP</h2>
+        <p class="abstract">Cercedilla map of local services and stores</p>
+        <div class="image round">
+          <a href="https://cercemap.org" target="_blank"><img src="img/logo-cercemap.png"></a>
+        </div>
+      </div>
       <div class="portfolio-item">
         <h2 class="title">PAKDB</h2>
         <p class="abstract">Just another knowledge database</p>
@@ -62,7 +79,7 @@
     <ul>
       <li><a target="_blank" href="http://github.com/jescacena">Github</a></li>
       <li><a target="_blank" href="https://es.linkedin.com/in/jescacena">Linkedin</a></li>
-      <li>©JES</li>
+      <li>©Copyright JES 2017</li>
     </ul>
   </footer>
 
@@ -82,7 +99,12 @@
       }
     });
   });
+
   </script>
+
+  <!-- build:js js/app.js -->
+  <script type="text/javascript" src="js/app.js"></script>
+  <!-- endbuild -->
 
 </body>
 
