new escacenas photo archive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- build:css css/app-new.css -->
   <link rel="stylesheet" href="css/app-new.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+
   <!-- endbuild -->
 
   <title>JesIdea</title>
@@ -66,6 +68,13 @@
           <a href="http://jesidea.com/indilog" target="_blank"><img src="img/logo-indilog.png"></a>
         </div>
       </div>
+      <div class="portfolio-item">
+        <h2 class="title">ESCACENAS</h2>
+        <p class="abstract">Photo family archive</p>
+        <div class="image round">
+          <a href="http://escacenas.jesidea.com" target="_blank"><img src="img/logo-escacenas.png"></a>
+        </div>
+      </div>
     </div>
 
     <section class="about">
@@ -77,10 +86,17 @@
 
   <footer>
     <ul>
-      <li><a target="_blank" href="http://github.com/jescacena">Github</a></li>
-      <li><a target="_blank" href="https://es.linkedin.com/in/jescacena">Linkedin</a></li>
-      <li>©Copyright JES 2017</li>
+      <li>
+          <i class="fa fa-github" aria-hidden="true"></i>
+            <a target="_blank" href="http://github.com/jescacena">Github</a></li>
+      <li>
+          <i class="fa fa-linkedin" aria-hidden="true"></i>
+            <a target="_blank" href="https://es.linkedin.com/in/jescacena">Linkedin</a></li>
     </ul>
+    <div class="copyright">
+        <!-- ©Copyright JES 2018 -->
+        ©Copyright Javier Escacena <script>var currentYear = new Date().getFullYear();document.write(currentYear);</script>, All Rights Reserved.
+    </div>
   </footer>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-rc1/jquery.min.js"></script>
