new items in portfolio

--- a/index.html
+++ b/index.html
@@ -1,126 +1,152 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <!-- build:css css/app-new.css -->
-  <link rel="stylesheet" href="css/app-new.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<!-- build:css css/app-new.css -->
+	<link rel="stylesheet" href="css/app-new.css" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-  <!-- endbuild -->
+	<!-- endbuild -->
 
-  <title>JesIdea</title>
+	<title>JesIdea</title>
 </head>
+
 <body>
 
-  <header class="header">
-    <div class="logo">
-      <img src="img/logo-jesidea.png" />
-    </div>
-    <nav>
-      <ul class="tags">
-        <li><a href="#about">About</a></li>
-      </ul>
-    </nav>
-  </header>
+	<header class="header">
+		<div class="logo">
+			<img src="img/logo-jesidea.png" />
+		</div>
+		<nav>
+			<ul class="tags">
+				<li><a href="#about">About</a></li>
+			</ul>
+		</nav>
+	</header>
 
-  <main>
-    <div class="portfolio-wrapper">
-      <div class="portfolio-item">
-        <h2 class="title">EL INTERCAMBIADOR</h2>
-        <p class="abstract">Cercedilla public transport online tool</p>
-        <div class="image round">
-          <a href="http://intercambiador.cercemap.org" target="_blank"><img src="img/logo-intercambiador.png"></a>
-        </div>
-      </div>
-      <div class="portfolio-item">
-        <h2 class="title">CERCEMAP</h2>
-        <p class="abstract">Cercedilla map of local services and stores</p>
-        <div class="image round">
-          <a href="https://cercemap.org" target="_blank"><img src="img/logo-cercemap.png"></a>
-        </div>
-      </div>
-      <div class="portfolio-item">
-        <h2 class="title">PAKDB</h2>
-        <p class="abstract">Just another knowledge database</p>
-        <div class="image round">
-          <a href="http://jesidea.com/pakdb/" target="_blank"><img src="img/mindfullness-icon.png"></a>
-        </div>
-      </div>
-      <div class="portfolio-item">
-        <h2 class="title">CISP4WEB</h2>
-        <p class="abstract">Online tool for local communities</p>
-        <div class="image round">
-          <a href="http://intercambio7picos.org/cisp/portal/" target="_blank"><img src="img/cisp-icon-2.png"></a>
-        </div>
-      </div>
-      <div class="portfolio-item">
-        <h2 class="title">FRONTEND APRENDIS</h2>
-        <p class="abstract">How to become a decent frontend developer</p>
-        <div class="image round">
-          <a href="https://jescacena.gitbooks.io/frontend-aprendis/content/" target="_blank"><img src="img/logo-gitbook.png"></a>
-        </div>
-      </div>
-      <div class="portfolio-item">
-        <h2 class="title">INDILOG</h2>
-        <p class="abstract">Photolog for awesome thing</p>
-        <div class="image round">
-          <a href="http://jesidea.com/indilog" target="_blank"><img src="img/logo-indilog.png"></a>
-        </div>
-      </div>
-      <div class="portfolio-item">
-        <h2 class="title">ESCACENAS</h2>
-        <p class="abstract">Photo family archive</p>
-        <div class="image round">
-          <a href="http://escacenas.jesidea.com" target="_blank"><img src="img/logo-escacenas.png"></a>
-        </div>
-      </div>
-    </div>
+	<main>
+		<div class="portfolio-wrapper">
 
-    <section class="about">
-      <a name="about"></a>
-      <p>Place for Ideas thought for world wide benefits</p>
-    </section>
+			<div class="portfolio-item">
+				<h2 class="title">TREKIAL</h2>
+				<p class="abstract">A funny way of knowing your trekking routes</p>
+				<div class="image round">
+					<a href="https://github.com/jescacena/guquiz" target="_blank"><img src="img/icon-trekial-hi-res.png"></a>
+				</div>
+			</div>
+			<div class="portfolio-item">
+				<h2 class="title">COMIC OLDIES</h2>
+				<p class="abstract">Comic Oldies App for Android</p>
+				<div class="image round">
+					<a href="https://github.com/jescacena/moapp" target="_blank"><img src="img/icon-moapp.png"></a>
+				</div>
+			</div>
+			<div class="portfolio-item">
+				<h2 class="title">EL INTERCAMBIADOR</h2>
+				<p class="abstract">Cercedilla public transport online tool</p>
+				<div class="image round">
+					<a href="http://intercambiador.cercemap.org" target="_blank"><img src="img/logo-intercambiador.png"></a>
+				</div>
+			</div>
+			<div class="portfolio-item">
+				<h2 class="title">CERCEMAP</h2>
+				<p class="abstract">Cercedilla map of local services and stores</p>
+				<div class="image round">
+					<a href="https://cercemap.org" target="_blank"><img src="img/logo-cercemap.png"></a>
+				</div>
+			</div>
+			<div class="portfolio-item">
+				<h2 class="title">PAKDB</h2>
+				<p class="abstract">Just another knowledge database</p>
+				<div class="image round">
+					<a href="http://jesidea.com/pakdb/" target="_blank"><img src="img/mindfullness-icon.png"></a>
+				</div>
+			</div>
+			<div class="portfolio-item">
+				<h2 class="title">JESITES</h2>
+				<p class="abstract">Development Frontend snippets</p>
+				<div class="image round">
+					<a href="http://jesidea.com/jesites/" target="_blank"><img src="img/jesites-icon.png"></a>
+				</div>
+			</div>
 
-</main>
+			<div class="portfolio-item">
+				<h2 class="title">CISP4WEB</h2>
+				<p class="abstract">Online tool for local communities</p>
+				<div class="image round">
+					<a href="http://intercambio7picos.org/cisp/portal/" target="_blank"><img src="img/cisp-icon-2.png"></a>
+				</div>
+			</div>
+			<div class="portfolio-item">
+				<h2 class="title">FRONTEND APRENDIS</h2>
+				<p class="abstract">How to become a decent frontend developer</p>
+				<div class="image round">
+					<a href="https://jescacena.gitbooks.io/frontend-aprendis/content/" target="_blank"><img src="img/logo-gitbook.png"></a>
+				</div>
+			</div>
+			<div class="portfolio-item">
+				<h2 class="title">INDILOG</h2>
+				<p class="abstract">Photolog for awesome thing</p>
+				<div class="image round">
+					<a href="http://jesidea.com/indilog" target="_blank"><img src="img/logo-indilog.png"></a>
+				</div>
+			</div>
+			<div class="portfolio-item">
+				<h2 class="title">ESCACENAS</h2>
+				<p class="abstract">Photo family archive</p>
+				<div class="image round">
+					<a href="http://escacenas.jesidea.com" target="_blank"><img src="img/logo-escacenas.png"></a>
+				</div>
+			</div>
+		</div>
 
-  <footer>
-    <ul>
-      <li>
-          <i class="fa fa-github" aria-hidden="true"></i>
-            <a target="_blank" href="http://github.com/jescacena">Github</a></li>
-      <li>
-          <i class="fa fa-linkedin" aria-hidden="true"></i>
-            <a target="_blank" href="https://es.linkedin.com/in/jescacena">Linkedin</a></li>
-    </ul>
-    <div class="copyright">
-        <!-- ©Copyright JES 2018 -->
-        ©Copyright Javier Escacena <script>var currentYear = new Date().getFullYear();document.write(currentYear);</script>, All Rights Reserved.
-    </div>
-  </footer>
+		<section class="about">
+			<a name="about"></a>
+			<p>Place for Ideas thought for world wide benefits</p>
+		</section>
 
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-rc1/jquery.min.js"></script>
-  <script type="text/javascript">
-  $(function() {
-    $('a[href*="#"]:not([href="#"])').click(function() {
-      if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-        var target = $(this.hash);
-        target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-        if (target.length) {
-          $('html, body').animate({
-            scrollTop: target.offset().top
-          }, 1000);
-          return false;
-        }
-      }
-    });
-  });
+	</main>
 
-  </script>
+	<footer>
+		<ul>
+			<li>
+				<i class="fa fa-github" aria-hidden="true"></i>
+				<a target="_blank" href="http://github.com/jescacena">Github</a></li>
+			<li>
+				<i class="fa fa-linkedin" aria-hidden="true"></i>
+				<a target="_blank" href="https://es.linkedin.com/in/jescacena">Linkedin</a></li>
+		</ul>
+		<div class="copyright">
+			<!-- ©Copyright JES 2018 -->
+			©Copyright Javier Escacena
+			<script>var currentYear = new Date().getFullYear(); document.write(currentYear);</script>, All Rights Reserved.
+		</div>
+	</footer>
 
-  <!-- build:js js/app.js -->
-  <script type="text/javascript" src="js/app.js"></script>
-  <!-- endbuild -->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-rc1/jquery.min.js"></script>
+	<script type="text/javascript">
+		$(function () {
+			$('a[href*="#"]:not([href="#"])').click(function () {
+				if (location.pathname.replace(/^\//, '') == this.pathname.replace(/^\//, '') && location.hostname == this.hostname) {
+					var target = $(this.hash);
+					target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
+					if (target.length) {
+						$('html, body').animate({
+							scrollTop: target.offset().top
+						}, 1000);
+						return false;
+					}
+				}
+			});
+		});
+
+	</script>
+
+	<!-- build:js js/app.js -->
+	<script type="text/javascript" src="js/app.js"></script>
+	<!-- endbuild -->
 
 </body>
 
