polaroid card version

--- a/index.html
+++ b/index.html
@@ -27,80 +27,282 @@
 	</header>
 
 	<main>
-		<div class="portfolio-wrapper">
 
-			<div class="portfolio-item">
-				<h2 class="title">TREKIAL</h2>
-				<p class="abstract">A funny way of knowing your trekking routes</p>
-				<div class="image round">
-					<a href="https://github.com/jescacena/guquiz" target="_blank"><img src="img/icon-trekial-hi-res.png"></a>
-				</div>
-			</div>
-			<div class="portfolio-item">
-				<h2 class="title">COMIC OLDIES</h2>
-				<p class="abstract">Comic Oldies App for Android</p>
-				<div class="image round">
-					<a href="https://github.com/jescacena/moapp" target="_blank"><img src="img/icon-moapp.png"></a>
-				</div>
-			</div>
-			<div class="portfolio-item">
-				<h2 class="title">EL INTERCAMBIADOR</h2>
-				<p class="abstract">Cercedilla public transport online tool</p>
-				<div class="image round">
-					<a href="http://intercambiador.cercemap.org" target="_blank"><img src="img/logo-intercambiador.png"></a>
-				</div>
-			</div>
-			<div class="portfolio-item">
-				<h2 class="title">CERCEMAP</h2>
-				<p class="abstract">Cercedilla map of local services and stores</p>
-				<div class="image round">
-					<a href="https://cercemap.org" target="_blank"><img src="img/logo-cercemap.png"></a>
-				</div>
-			</div>
-			<div class="portfolio-item">
-				<h2 class="title">PAKDB</h2>
-				<p class="abstract">Just another knowledge database</p>
-				<div class="image round">
-					<a href="http://jesidea.com/pakdb/" target="_blank"><img src="img/mindfullness-icon.png"></a>
-				</div>
-			</div>
-			<div class="portfolio-item">
-				<h2 class="title">JESITES</h2>
-				<p class="abstract">Development Frontend snippets</p>
-				<div class="image round">
-					<a href="http://jesidea.com/jesites/" target="_blank"><img src="img/jesites-icon.png"></a>
-				</div>
-			</div>
+		<!-- <div class="container">
+			<ul class="portfolio-wrapper">
 
-			<div class="portfolio-item">
-				<h2 class="title">CISP4WEB</h2>
-				<p class="abstract">Online tool for local communities</p>
-				<div class="image round">
-					<a href="http://intercambio7picos.org/cisp/portal/" target="_blank"><img src="img/cisp-icon-2.png"></a>
+				 <li>KAKA</li>
+				<li>KAKA2</li>
+				<li>KAKA3</li>
+				<li>KAKA4</li>
+				<li>KAKA5</li>
+				<li class="polaroid">KAKA</li>
+				<li class="polaroid">KAKA2</li>
+				<li class="polaroid">KAKA3</li>
+				<li class="polaroid">KAKA4</li>
+				<li class="polaroid">KAKA5</li>
+			</ul>
+		</div> -->
+
+		<ul class="portfolio-wrapper">
+
+			<li class="polaroid">
+				<img src="img/icon-trekial-hi-res.png" alt="Trekial App" style="width:100%">
+				<div class="container">
+					<h2 class="title">TREKIAL</h2>
+
+					<div class="tooltip">
+						<i class="fa fa-info-circle" aria-hidden="true"></i>
+						<div class="tooltiptext">
+							<p>
+								A cool way of knowing your trekking routes
+							</p>
+							<ul>
+								<li>
+									<a href="http://jesidea.com/guquiz/landing/trekial.html" target="_blank">
+										<i class="fa fa-home" aria-hidden="true"></i>
+									</a>
+								</li>
+								<li>
+									<a href="https://github.com/jescacena/guquiz" target="_blank">
+										<i class="fa fa-github" aria-hidden="true"></i>
+									</a>
+								</li>
+								<li>
+									<a href="https://play.google.com/store/apps/details?id=com.jes.guquiz" target="_blank">
+										<i class="fa fa-android" aria-hidden="true"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+
 				</div>
-			</div>
-			<div class="portfolio-item">
-				<h2 class="title">FRONTEND APRENDIS</h2>
-				<p class="abstract">How to become a decent frontend developer</p>
-				<div class="image round">
-					<a href="https://jescacena.gitbooks.io/frontend-aprendis/content/" target="_blank"><img src="img/logo-gitbook.png"></a>
+			</li>
+
+			<li class="polaroid">
+				<img src="img/icon-moapp.png" alt="Comic Oldies App" style="width:100%">
+				<div class="container">
+					<h2 class="title">COMIC OLDIES</h2>
+
+					<div class="tooltip">
+						<i class="fa fa-info-circle" aria-hidden="true"></i>
+						<div class="tooltiptext">
+							<p>
+								Comic Oldies native app for Android
+							</p>
+							<ul>
+								<li>
+									<a href="https://github.com/jescacena/moapp" target="_blank">
+										<i class="fa fa-github" aria-hidden="true"></i>
+									</a>
+								</li>
+								<li>
+									<a href="https://play.google.com/store/apps/details?id=com.jes.moappv2" target="_blank">
+										<i class="fa fa-android" aria-hidden="true"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</div>
-			</div>
-			<div class="portfolio-item">
-				<h2 class="title">INDILOG</h2>
-				<p class="abstract">Photolog for awesome thing</p>
-				<div class="image round">
-					<a href="http://jesidea.com/indilog" target="_blank"><img src="img/logo-indilog.png"></a>
+			</li>
+
+			<li class="polaroid">
+				<img src="img/logo-intercambiador.png" alt="Intercambiador" style="width:100%">
+				<div class="container">
+					<h2 class="title">INTERCAMBIADOR</h2>
+
+					<div class="tooltip">
+						<i class="fa fa-info-circle" aria-hidden="true"></i>
+						<div class="tooltiptext">
+							<p>
+								Cercedilla public transport online tool
+							</p>
+							<ul>
+								<li>
+									<a href="http://intercambiador.cercemap.org/" target="_blank">
+										<i class="fa fa-home" aria-hidden="true"></i>
+									</a>
+								</li>
+								<li>
+									<a href="https://github.com/jescacena/mordorg-public-transport" target="_blank">
+										<i class="fa fa-github" aria-hidden="true"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</div>
-			</div>
-			<div class="portfolio-item">
-				<h2 class="title">ESCACENAS</h2>
-				<p class="abstract">Photo family archive</p>
-				<div class="image round">
-					<a href="http://escacenas.jesidea.com" target="_blank"><img src="img/logo-escacenas.png"></a>
+			</li>
+
+			<li class="polaroid">
+				<img src="img/logo-cercemap.png" alt="Cercemap" style="width:100%">
+				<div class="container">
+					<h2 class="title">CERCEMAP</h2>
+
+					<div class="tooltip">
+						<i class="fa fa-info-circle" aria-hidden="true"></i>
+						<div class="tooltiptext">
+							<p>Cercedilla map of local services and stores</p>
+							<ul>
+								<li>
+									<a href="https://cercemap.org" target="_blank">
+										<i class="fa fa-home" aria-hidden="true"></i>
+									</a>
+								</li>
+								<li>
+									<a href="https://github.com/jescacena/mordorg" target="_blank">
+										<i class="fa fa-github" aria-hidden="true"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
 				</div>
-			</div>
-		</div>
+			</li>
+
+			<li class="polaroid">
+				<img src="img/mindfullness-icon.png" alt="Just another knowledge database" style="width:100%">
+				<div class="container">
+					<h2 class="title">PAKDB</h2>
+
+					<div class="tooltip">
+						<i class="fa fa-info-circle" aria-hidden="true"></i>
+						<div class="tooltiptext">
+							<p>
+								Just another knowledge database
+							</p>
+							<ul>
+								<li>
+									<a href="http://jesidea.com/pakdb/" target="_blank">
+										<i class="fa fa-home" aria-hidden="true"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</li>
+
+			<li class="polaroid">
+				<img src="img/jesites-icon.png" alt="Frontend snippets" style="width:100%">
+				<div class="container">
+					<h2 class="title">JESITES</h2>
+
+					<div class="tooltip">
+						<i class="fa fa-info-circle" aria-hidden="true"></i>
+						<div class="tooltiptext">
+							<p>
+								Frontend snippets for a decent frontend
+							</p>
+							<ul>
+								<li>
+									<a href="http://jesidea.com/jesites/" target="_blank">
+										<i class="fa fa-home" aria-hidden="true"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</li>
+
+			<li class="polaroid">
+				<img src="img/cisp-icon-2.png" alt="Online tool for local communities" style="width:100%">
+				<div class="container">
+					<h2 class="title">CISP4WEB</h2>
+
+					<div class="tooltip">
+						<i class="fa fa-info-circle" aria-hidden="true"></i>
+						<div class="tooltiptext">
+							<p>
+								Online tool for local communities
+							</p>
+							<ul>
+								<li>
+									<a href="http://intercambio7picos.org/cisp/portal/" target="_blank">
+										<i class="fa fa-home" aria-hidden="true"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</li>
+
+			<li class="polaroid">
+				<img src="img/logo-gitbook.png" alt="How to become a decent frontend developer" style="width:100%">
+				<div class="container">
+					<h2 class="title">FRONT APRENDIS</h2>
+
+					<div class="tooltip">
+						<i class="fa fa-info-circle" aria-hidden="true"></i>
+						<div class="tooltiptext">
+							<p>
+								How to become a decent frontend developer
+							</p>
+							<ul>
+								<li>
+									<a href="https://jescacena.gitbooks.io/frontend-aprendis/content/" target="_blank">
+										<i class="fa fa-home" aria-hidden="true"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</li>
+
+			<li class="polaroid">
+				<img src="img/logo-indilog.png" alt="Photolog for awesome thing" style="width:100%">
+				<div class="container">
+					<h2 class="title">INDILOG</h2>
+
+					<div class="tooltip">
+						<i class="fa fa-info-circle" aria-hidden="true"></i>
+						<div class="tooltiptext">
+							<p>
+								Photolog for awesome thing for different ages
+							</p>
+							<ul>
+								<li>
+									<a href="http://jesidea.com/indilog" target="_blank">
+										<i class="fa fa-home" aria-hidden="true"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</li>
+
+
+			<li class="polaroid">
+				<img src="img/logo-escacenas.png" alt="Family archive" style="width:100%">
+				<div class="container">
+					<h2 class="title">ESCACENAS</h2>
+
+					<div class="tooltip">
+						<i class="fa fa-info-circle" aria-hidden="true"></i>
+						<div class="tooltiptext">
+							<p>
+								Escacena-Sanchez family old ages archive
+							</p>
+							<ul>
+								<li>
+									<a href="http://escacenas.jesidea.com" target="_blank">
+										<i class="fa fa-home" aria-hidden="true"></i>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</li>
+
+		</ul>
+
 
 		<section class="about">
 			<a name="about"></a>
